# torch_graph

./: README.md  pyproject.toml  requirements.txt  setup.py
cyy_torch_graph/: __init__.py
cyy_torch_graph/data_pipeline/: __init__.py  transform.py
cyy_torch_graph/dataset/: __init__.py  collection.py  partition.py  util.py
cyy_torch_graph/model/: __init__.py  bak.py  evaluator.py
cyy_torch_graph/model_evaluator/: __init__.py  graph.py
cyy_torch_graph/test/: test_dataset.py  test_training.py
test/: test_dataset.py  test_training.py
