[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyy_torch_graph"
version = "0.1"
requires-python = ">=3.11"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
  {name = "cyy", email = "cyyever@outloo.com"},
]
license = {text = "BSD License"}
classifiers = [
  "Programming Language :: Python"
]

dependencies = [
"cyy_torch_toolbox@git+https://git@github.com/cyyever/torch_toolbox.git@main",
  "torch_geometric",
  "networkx",
  "ogb",
]

[project.urls]
Repository = "https://github.com/cyyever/torch_graph"

[tool.ruff]
target-version = "py312"
src = ["cyy_torch_graph"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["F403"]
